# Taken

./: CMakeLists.txt  Direction.h  GameManager.cpp  GameManager.h  Matrix.cpp  Matrix.h  MatrixBuilder.cpp  MatrixBuilder.h  Node.cpp  Node.h  Player.cpp  Player.h  Ranking.cpp  Ranking.h  Reader.cpp  Reader.h  UtilityFunctions.cpp  UtilityFunctions.h  main.cpp  makefile
src/: main.cpp
src/structures/: Node.hpp  OrthogonalMatrix.hpp
